# gias3.examples

./: ASM_profile_matching.py  HRV.py  HRV_single_image_params_test.py  MANIFEST.in  README.rst  STL_nearest_distance.py  csgcup.py  hmf_inp_2_surf.py  hmf_mat_map_inp.py  inp_sample_dicom.py  inp_sample_dicom_params.ini  integral_image_cython.py  modelio.py  rbfreg.py  setup.cfg  surface_to_surface_distance.py  tetgen_meshes.py  view_fieldwork_model_elements.py  view_fieldwork_model_elements_script.py  view_fieldwork_pca.py  vtk_read_write.py
data/: 2008_1741_tibia_fibula.wrl  manualCarpal1.stl  test_femur_4.inp  tibia_morphed.stl  tibia_surface.stl  tibia_volume.inp
data/tetgen_mesh/: femur_interior.1.ele
fieldwork/: build_2d_mesh.py  fit_whole_pelvis.py  host_mesh_fit_data.py  host_mesh_fit_surface_data.py  normalsmoother.py  quartic_element_fitting.py  quartic_elements.py  remove_elements.py
fieldwork/data/: BN00104_E14727_S01_mc1 4_001.wrl  BN00105_E15006_S01_mc1 8_001.wrl  BN00105_E15006_S01_tpm 7_001.wrl
fieldwork/fit_whole_pelvis_data/: RH_params.py  left_hemi_cubic.ens  left_hemi_cubic.geof  left_hemi_cubic.mesh
src/gias3/examples/: ASM_profile_matching.py  HRV.py  HRV_single_image_params_test.py  STL_nearest_distance.py  csgcup.py  hmf_inp_2_surf.py  hmf_mat_map_inp.py  inp_read_write.py  inp_sample_dicom.py  integral_image_cython.py  modelio.py  surface_to_surface_distance.py  tetgen_meshes.py  view_fieldwork_model_elements.py  view_fieldwork_model_elements_script.py  view_fieldwork_pca.py  vtk_read_write.py
src/gias3/examples/data/: tibia_left.ens  (+7 more)
(+22 files in other folders)
