[metadata]
name = gias3.examples
version = attr: src.gias3.examples.__version__
description = Examples for GIAS3
long_description = file: README.rst, LICENSE.rst
keywords = musculoskeletal, modelling
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
namespace_packages = gias3
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
